--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "daisyui": "^4.12.10",
     "date-fns": "^4.1.0",
     "jotai": "^2.9.1",
-    "lucide-react": "^0.462.0",
+    "lucide-react": "^0.468.0",
     "next": "14.2.10",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
