--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "jotai": "^2.9.1",
     "lucide-react": "^0.468.0",
     "next": "14.2.10",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
